--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
     box-sizing: border-box;
     font-family: RobotoLight;
 }
+body{
+    background: black;
+}
 h1{
     padding: 36px 0px 35px 0px;
     margin: 0;
@@ -13,7 +16,8 @@ h1{
 }
 div[ng-app="editEmailsApp"]{
     display: block;
-    width: 100%;
+    width: 500px;
+    margin: auto;
     /*border:1px solid;*/
     background: #f5f5f5;
 }
