--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h1{
 }
 div[ng-app="editEmailsApp"]{
     display: block;
-    width: 500px;
+    max-width: 500px;
     margin: auto;
     /*border:1px solid;*/
     background: #f5f5f5;
@@ -26,7 +26,7 @@ div[ng-app="editEmailsApp"]{
 }
 #buttons {
     background: white;
-    padding: 30px 40px 40px 40px;
+    padding: 20px 40px 40px 40px;
     font-size: 0;
 }
 button{
@@ -35,6 +35,7 @@ button{
     color: white;
     border:none;
     margin-right: 20px;
+    margin-top: 10px;
     height: 30px;
 }
 emails-editor{
