--- a/emailsEditor.css
+++ b/emailsEditor.css
@@ -3,6 +3,7 @@ emails-editor{
 }
 emails-editor div {
     border-top: 1px solid #cccccc;
+    padding: 7px 9px;
     height: 100px;
     overflow-y: auto;
     width: 100%;
