--- a/style.css
+++ b/style.css
@@ -1,19 +1,38 @@
 @font-face{
     font-family: "MyriadPro";
-    src: url("fonts\\MyriadPro\\MyriadPro-Bold.otf");
+    src: url("fonts\\MyriadPro\\MyriadPro-Regular.otf");
 }
+
 *{
     box-sizing: border-box;
     font-family: MyriadPro;
 }
+
 body{
     background: black;
 }
+
 h1{
-    padding: 36px 0px 35px 0px;
+    padding: 31px 0px 35px 0px;
     margin: 0;
     font-size: 20px;
+    font-weight: normal;
 }
+
+span.naming::before{
+    content: '\201c';
+    font-style: italic;
+    margin-left: -5px;
+    margin-right: 3px;
+}
+
+span.naming::after{
+    content: '\201d';
+    font-style: italic;
+    margin-left: -3px;
+    margin-right: 1px;
+}
+
 div[ng-app="editEmailsApp"]{
     display: block;
     max-width: 500px;
@@ -21,14 +40,17 @@ div[ng-app="editEmailsApp"]{
     /*border:1px solid;*/
     background: #f5f5f5;
 }
+
 #top{    
-    padding: 0 40px;
+    padding: 0 39px;
 }
+
 #buttons {
     background: white;
     padding: 20px 40px 40px 40px;
     font-size: 0;
 }
+
 button{
     background: #6699ff;
     border-radius: 1px;
@@ -37,7 +59,10 @@ button{
     margin-right: 20px;
     margin-top: 10px;
     height: 30px;
+    font-size: 14px;
+    font-weight: lighter;
 }
+
 emails-editor{
     margin-bottom: 30px;
 }
