--- a/style.css
+++ b/style.css
@@ -41,11 +41,11 @@ div[ng-app="editEmailsApp"]{
     background: #f5f5f5;
 }
 
-#top{    
+.top{    
     padding: 0 39px;
 }
 
-#buttons {
+.buttons {
     background: white;
     padding: 20px 40px 40px 40px;
     font-size: 0;
